[project]
name = "ediary-marcos"
version = "0.1.0"
description = "e-Diary using FastAPI, SQLModel, Pydantic"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "EDC Team" }]
dependencies = [
  "fastapi>=0.115.0",
  "sqlmodel>=0.0.22",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "uvicorn[standard]>=0.30.0"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
